<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@drawable/calpal_background">

    <TextView
        android:id="@+id/sugarCounterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-14dp"
        android:layout_marginBottom="-10dp"
        android:padding="16dp"
        android:text="Sugar: 0 g"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fatCounterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-14dp"
        android:layout_marginBottom="-14dp"
        android:padding="16dp"
        android:text="Fat: 0 g"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/sugarCounterTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/carbCounterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-14dp"
        android:layout_marginBottom="-14dp"
        android:padding="16dp"
        android:text="Carbs: 0 g"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/fatCounterTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/proteinCounterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-14dp"
        android:layout_marginBottom="-14dp"
        android:padding="16dp"
        android:text="Protein: 0 g"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/carbCounterTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/calpaltransparent"
        app:layout_constraintEnd_toStartOf="@+id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/titleTextView"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:gravity="center"
        android:text="@string/Your_Final_Plan"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/logoImageView"
        app:layout_constraintStart_toEndOf="@+id/logoImageView"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/caloricIntakeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="30dp"
        android:text="@string/today_s_caloric_intake"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalTextView" />


    <TextView
        android:id="@+id/userInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_info"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/goalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/your_goal"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfoTextView" />

    <TextView
        android:id="@+id/mealsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"
        android:text="Placeholder text"
        android:textColor="@android:color/black"
        android:visibility="invisible"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/logoImageView"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/circular_progress"
        app:layout_constraintTop_toBottomOf="@+id/goalTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0%"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@+id/progressBar"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar" />


    <Button
        android:id="@+id/addMealButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/add_meal_entry"
        android:backgroundTint="#626262"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="98dp"
        android:layout_height="44dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="16dp"
        android:text="0/2000 Cal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-268dp"
        android:layout_marginBottom="275dp"
        android:text="Reset Cal. Intake"
        android:backgroundTint="#626262"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent" />

    <Button
        android:id="@+id/editUserData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-260dp"
        android:layout_marginBottom="216dp"
        android:backgroundTint="#626262"
        android:text="Edit User Data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>